# SignalX

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Contributors.md  License.txt  Readme.md
signalx/: function.h  observer.h  signalx.h
test/: CMakeLists.txt  test_singals.cc
